@@ -1,3 +1,9 @@
+2002-08-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/interpol.c (cp_implode): Introduced special handling for
+ 	former zeroes on log axes, now represented by type==OUTRANGE,
+ 	value==-VERYLARGE. Avoid SIGFPE crash on Alpha.
+
 2002-08-01  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c (eval_plots): Fix buggy test if current plot style
@@ -850,7 +856,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/07/26 16:42:27 $).
+	last modification date (from the tag $Date: 2002/08/01 12:05:14 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
